--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* App.css */
+.app-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.sidebar {
+  width: 250px;
+  background-color: #f0f0f0;
+  transition: transform 0.3s ease-in-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sidebar.dark {
+  background-color: #333;
+  color: #fff;
+}
+
+.sidebar.closed {
+  transform: translateX(-250px); /* Cacher le sidebar */
+}
+
+.dashboard {
+  flex: 1;
+  overflow: auto;
+  padding: 20px;
 }
